# Monta.ai

./: .gitignore  LICENSE  README.md
montaai/: README.md  pyproject.toml
montaai/montaai/: app.py  config.py
montaai/montaai/helpers/: database.py  helpers.py
montaai/montaai/migrations/versions/: 250dca4b3f9f_initial_migration.py  3de123b2b1a8_adding_conversation_and_message_models.py  8f3bff988767_changing_enum_to_regular_string.py
montaai/montaai/models/: conversations.py  messages.py  users.py
montaai/montaai/services/: user_service.py
montaai/montaai/views/: auth.py  conversation.py  home.py
montaai/tests/views/: test_auth.py  test_conversation.py
