[tool.poetry]
name = "montaai"
version = "0.1.0"
description = ""
authors = ["Mohamed Abdel Sattar <mohamed.abdelsattar92@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.21.2"
flask = "^3.0.3"
flask-jwt-extended = "^4.6.0"
pytest = "^8.1.1"
pytest-mock = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
