[tool.poetry]
name = "montaai"
version = "0.1.0"
description = ""
authors = ["Mohamed Abdel Sattar <mohamed.abdelsattar92@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
openai = "^1.21.2"
flask = "^3.0.3"
flask-jwt-extended = "^4.6.0"
pytest = "^8.1.1"
pytest-mock = "^3.14.0"
flask-sqlalchemy = "^3.1.1"
bcrypt = "^4.1.3"
psycopg2-binary = "^2.9.9"
flask-migrate = "^4.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
